--- a/Scratch.html
+++ b/Scratch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href=".css/scratchsytles.css" >
+    <link rel="stylesheet" type="text/css" href= "css/scratchstyles.css" >
     <title>Fun Facts</title>
 </head>
 <body>
